plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'yys'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	testImplementation {
		exclude group: 'org.slf4j', module: 'slf4j-simple'
	}
	testRuntimeOnly {
		exclude group: 'org.slf4j', module: 'slf4j-simple'
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// 테스트용 H2 데이터베이스
	testImplementation 'com.h2database:h2'

	// 테스트용 embedded Redis (선택사항)
	testImplementation 'it.ozimov:embedded-redis:0.7.3'

	// 개발 도구
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// 액추에이터 (모니터링)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	// MySQL 드라이버 추가
	runtimeOnly 'com.mysql:mysql-connector-j'
	// JPA 의존성 (없다면 추가)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// Redis 의존성
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
}

tasks.named('test') {
	useJUnitPlatform()
}
